--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -20,7 +20,7 @@
 -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.temperatureconverter"
+    package="com.saganspirit8.temperatureconverter"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -40,7 +40,7 @@
         android:value="@integer/google_play_services_version" />
         
         <activity
-            android:name="com.example.temperatureconverter.TempConverter"
+            android:name="com.saganspirit8.temperatureconverter.TempConverter"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
